[fix] better vertical spacing

--- a/sass/theme/_navmenus.css
+++ b/sass/theme/_navmenus.css
@@ -62,12 +62,15 @@
         padding: 4pt 0;
     }
     ul.menu {
-        font: 14px verdana;
+        font: 1em verdana;
         text-transform: uppercase;
+        padding-bottom: 3px;
     }
     ul.sub-menu {
+        font: 0.9em verdana;
         padding-bottom: 8pt;
         text-transform: none;
+        padding-top: 10px;
     }
 
     ul.sub-menu > li {
